--- a/134-Node-Connecting_The_Form/views/home.ejs
+++ b/134-Node-Connecting_The_Form/views/home.ejs
@@ -1,8 +1,6 @@
 <h1>JOIN US</h1>
-<h1>Favourite color is <%=favourite_color%></h1>
-<h1>Favourite number is <%= 23 * 23 %></h1>
 <p class="lead">Enter your email to join <strong><%=user_count%></strong> others on our waitlist. We are 100% not a cult.</p>
 <form method = "POST" action="/register">
-    <input type="" class="form" placeholder="Enter your Email">
+    <input type="" class="form" name="email" placeholder="Enter your Email">
     <button>Join Now</button>
 </form>
